[dependencies]
cgi = "0.3"
http = "0.2"
askama = "0.12.0"
r2d2 = "0.8.10"
rusqlite = "0.29.0"
r2d2_sqlite = "0.22.0"

#rocket = "0.5"




[package]
name = "webserv"
version = "0.1.0"
build = "build.rs"


[[bin]]
name = "register_landing_page"
path = "src/register_landing_page.rs"


[[bin]]
name = "profile"
path = "src/profile.rs"

[[bin]]
name = "login"
path = "src/login.rs"

[[bin]]
name = "register"
path = "src/register.rs"
